--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,31 @@
 aiohttp==3.5.4
-aiohttp-jinja2==1.1.0
+aiohttp-jinja2==1.1.1
 aiohttp-session==2.7.0
-aiosmtplib==1.0.4
 asn1crypto==0.24.0
 async-timeout==3.0.1
 attrs==19.1.0
-cachetools==3.1.0
+cachetools==3.1.1
+cffi==1.12.3
 chardet==3.0.4
 cryptography==2.6.1
-google-api-python-client==1.7.8
+google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
-httplib2==0.12.1
+httplib2==0.12.3
 idna==2.8
-idna-ssl==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 motor==2.0.0
 multidict==4.5.2
 passlib==1.7.1
+Pillow==6.0.0
+Pillow-PIL==0.1.dev0
 pyasn1==0.4.5
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
 pycparser==2.19
-pymongo==3.7.2
+pymongo==3.8.0
 rsa==4.0
 six==1.12.0
-typing-extensions==3.7.2
 uritemplate==3.0.0
 uvloop==0.12.2
-WTForms==2.2.1
 yarl==1.3.0
