--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -7,7 +7,7 @@ cachetools==4.0.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
-cryptography==3.2
+cryptography>=3.3.2
 google-api-core==1.16.0
 google-api-python-client==1.8.0
 google-auth==1.13.1
